--- a/ResumeProject/Views/Skill/Index.cshtml
+++ b/ResumeProject/Views/Skill/Index.cshtml
@@ -1,8 +1,28 @@
-﻿
+﻿@model List<ResumeProject.Models.TblSkill>
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Skill List</h2>
+
+<table class="table table-bordered">
+    <tr>
+        <th>#</th>
+        <th>Skill Title</th>
+        <th>Delete</th>
+        <th>Update</th>
+    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.SkillID</td>
+            <td>@item.SkillTitle</td>
+            <td><a href="#" class="btn btn-outline-danger">Delete</a></td>
+            <td><a href="#" class="btn btn-outline-success">Update</a></td>
+        </tr>
+    }
+</table>
+<a href="#" class="btn btn-outline-primary">Create New Skill</a>
 
