--- a/ResumeProject/Views/Skill/Index.cshtml
+++ b/ResumeProject/Views/Skill/Index.cshtml
@@ -19,10 +19,9 @@
         <tr>
             <td>@item.SkillID</td>
             <td>@item.SkillTitle</td>
-            <td><a href="#" class="btn btn-outline-danger">Delete</a></td>
-            <td><a href="#" class="btn btn-outline-success">Update</a></td>
+            <td><a href="/Skill/DeleteSkill/@item.SkillID" class="btn btn-outline-danger">Delete</a></td>
+            <td><a href="/Skill/UpdateSkill/@item.SkillID" class="btn btn-outline-success">Update</a></td>
         </tr>
     }
 </table>
-<a href="#" class="btn btn-outline-primary">Create New Skill</a>
-
+<a href="/Skill/AddSkill/" class="btn btn-outline-primary">Create New Skill</a>
