--- a/ResumeProject/Views/Shared/_AdminLayout.cshtml
+++ b/ResumeProject/Views/Shared/_AdminLayout.cshtml
@@ -26,10 +26,19 @@
                         <a href="/Skill/Index/">Skills</a>
                     </li>
                     <li>
-                        <a href="#">Portfolio</a>
+                        <a href="/Technology/Index/">Technologies</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="/Profile/Index/">Profile</a>
+                    </li>
+                    <li>
+                        <a href="~/Project/Index/">Projects</a>
+                    </li>
+                    <li>
+                        <a href="/Category/Index/">Categories</a>
+                    </li>
+                    <li>
+                        <a href="/Contact/Index/">Contact</a>
                     </li>
                 </ul>
 
