--- a/ResumeProject/Views/Contact/Index.cshtml
+++ b/ResumeProject/Views/Contact/Index.cshtml
@@ -15,7 +15,6 @@
         <th>Subject</th>
         <th>Date</th>
         <th>Delete</th>
-        <th>Update</th>
         <th>Open Message</th>
     </tr>
     @foreach (var item in Model)
@@ -25,10 +24,8 @@
             <td>@item.FullName</td>
             <td>@item.TblCategory.CategoryName</td>
             <td>@item.Date</td>
-            <td><a href="/Skill/DeleteSkill/@item.ContactID" class="btn btn-outline-danger">Delete</a></td>
-            <td><a href="/Skill/UpdateSkill/@item.ContactID" class="btn btn-outline-success">Update</a></td>
-            <td><a href="/Skill/UpdateSkill/" class="btn btn-outline-success">Open Message</a></td>
+            <td><a href="/Contact/DeleteContact/@item.ContactID" class="btn btn-outline-danger">Delete</a></td>
+            <td><a href="#" class="btn btn-outline-success">Open Message</a></td>
         </tr>
     }
 </table>
-
