--- a/ResumeProject/Views/Shared/_AdminLayout.cshtml
+++ b/ResumeProject/Views/Shared/_AdminLayout.cshtml
@@ -35,10 +35,13 @@
                         <a href="~/Project/Index/">Projects</a>
                     </li>
                     <li>
+                        <a href="/Contact/Index/">Inbox</a>
+                    </li>
+                    <li>
                         <a href="/Category/Index/">Categories</a>
                     </li>
                     <li>
-                        <a href="/Contact/Index/">Contact</a>
+                        <a href="/Statistic/Index/">Statistics</a>
                     </li>
                 </ul>
 
