--- a/ResumeProject/Views/Default/Index.cshtml
+++ b/ResumeProject/Views/Default/Index.cshtml
@@ -408,9 +408,9 @@ Author URL: http://w3layouts.com
             <div class="row portfolio-area clearfix p-0 m-0">
                 <div class="col-lg-4 col-md-6 portfolio-item2 content" data-id="id-1" data-type="cat-item-1">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog1.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="~/Content/starter/assets/images/blog1.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog1.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="~/Content/starter/assets/images/blog1.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Architecture</h3>
                                 <p class="content-text">This is a short description</p>
@@ -420,9 +420,9 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-md-0 mt-4" data-id="id-2" data-type="cat-item-2">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog2.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="~/Content/starter/assets/images/blog2.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog2.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="~/Content/starter/assets/images/blog2.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Corporate</h3>
                                 <p class="content-text">This is a short description</p>
@@ -432,9 +432,9 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-lg-0 mt-4" data-id="id-3" data-type="cat-item-3">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog3.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="~/Content/starter/assets/images/blog3.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog3.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="~/Content/starter/assets/images/blog3.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Ecommerce</h3>
                                 <p class="content-text">This is a short description</p>
@@ -444,9 +444,9 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-4" data-id="id-4" data-type="cat-item-4">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog4.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="~/Content/starter/assets/images/blog4.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog4.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="~/Content/starter/assets/images/blog4.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Mobile UI</h3>
                                 <p class="content-text">This is a short description</p>
@@ -456,9 +456,9 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-4" data-id="id-5" data-type="cat-item-5">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog5.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="~/Content/starter/assets/images/blog5.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog5.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="~/Content/starter/assets/images/blog5.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Fashion</h3>
                                 <p class="content-text">This is a short description</p>
@@ -468,9 +468,9 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-4" data-id="id-7" data-type="cat-item-6">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog6.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="~/Content/starter/assets/images/blog6.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog6.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="~/Content/starter/assets/images/blog6.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Real Estate </h3>
                                 <p class="content-text">This is a short description</p>
@@ -490,37 +490,37 @@ Author URL: http://w3layouts.com
             <div class="align-items-center">
                 <div id="owl-demo" class="owl-carousel owl-theme">
                     <div class="item">
-                        <img src="assets/images/logo1.png" class="img-fluid" alt="Brand">
+                        <img src="~/Content/starter/assets/images/logo1.png" class="img-fluid" alt="Brand">
                     </div>
                     <div class="item">
-                        <img src="assets/images/logo2.png" class="img-fluid" alt="Brand">
-                    </div>
-
-                    <div class="item">
-                        <img src="assets/images/logo3.png" class="img-fluid" alt="Brand">
+                        <img src="~/Content/starter/assets/images/logo2.png" class="img-fluid" alt="Brand">
                     </div>
 
                     <div class="item">
-                        <img src="assets/images/logo4.png" class="img-fluid" alt="Brand">
+                        <img src="~/Content/starter/assets/images/logo3.png" class="img-fluid" alt="Brand">
                     </div>
 
                     <div class="item">
-                        <img src="assets/images/logo5.png" class="img-fluid" alt="Brand">
+                        <img src="~/Content/starter/assets/images/logo4.png" class="img-fluid" alt="Brand">
                     </div>
 
                     <div class="item">
-                        <img src="assets/images/logo1.png" class="img-fluid" alt="Brand">
-                    </div>
-                    <div class="item">
-                        <img src="assets/images/logo2.png" class="img-fluid" alt="Brand">
+                        <img src="~/Content/starter/assets/images/logo5.png" class="img-fluid" alt="Brand">
                     </div>
 
                     <div class="item">
-                        <img src="assets/images/logo3.png" class="img-fluid" alt="Brand">
+                        <img src="~/Content/starter/assets/images/logo1.png" class="img-fluid" alt="Brand">
+                    </div>
+                    <div class="item">
+                        <img src="~/Content/starter/assets/images/logo2.png" class="img-fluid" alt="Brand">
                     </div>
 
                     <div class="item">
-                        <img src="assets/images/logo4.png" class="img-fluid" alt="Brand">
+                        <img src="~/Content/starter/assets/images/logo3.png" class="img-fluid" alt="Brand">
+                    </div>
+
+                    <div class="item">
+                        <img src="~/Content/starter/assets/images/logo4.png" class="img-fluid" alt="Brand">
                     </div>
                 </div>
             </div>
