--- a/ResumeProject/Views/Default/PartialBanner.cshtml
+++ b/ResumeProject/Views/Default/PartialBanner.cshtml
@@ -5,12 +5,12 @@
                 <h1 class="mb-3">Hi, I'm İpek Gülşen ÇELİK</h1>
                 <h3 class="mb-4"> <span class="typed-text"></span><span class="cursor">&nbsp</span> </h3>
                 <p>
-                    I love Graphic design and Photography and have been working on my portfolio since 2016. I Can
+                    I love Web Design and App Development and have been working on my portfolio since 2016. I Can
                     give your business a new Creative start right away!
                 </p>
 
                 <a class="btn btn-primary btn-style mt-5 me-2" href="contact.html"> Hire Me </a>
-                <a class="btn btn-style transparent-btn mt-5" href="#portfolio"> My Portfolio </a>
+                <a class="btn btn-style transparent-btn mt-5" href="#portfolio"> My Project </a>
 
             </div>
             <div class="col-lg-5 text-lg-end my-image mt-lg-0 mt-4">
