--- a/ResumeProject/Views/Default/PartialFooter.cshtml
+++ b/ResumeProject/Views/Default/PartialFooter.cshtml
@@ -30,7 +30,7 @@
     <div class="container py-4">
         <div class="row footer-grids">
             <div class="col-lg-6 copyright text-lg-start text-center align-center">
-                <p>© 2022 UI Portfolio. All Rights Reserved | Design by <a href="http://w3layouts.com/"> W3layouts</a> </p>
+                <p>© @DateTime.Now.Year UI Portfolio. All Rights Reserved | Design by <a href="http://w3layouts.com/"> W3layouts</a> </p>
             </div>
             <div class="col-lg-6 text-lg-end text-center mt-lg-0 mt-4">
                 <div class="social">
