--- a/ResumeProject/Views/Default/PartialFeaturedSkills.cshtml
+++ b/ResumeProject/Views/Default/PartialFeaturedSkills.cshtml
@@ -1,4 +1,7 @@
-﻿<section class="w3l-skills py-5" id="skills">
+﻿@using ResumeProject.Models
+@model List<TblTechnology>
+
+<section class="w3l-skills py-5" id="skills">
     <div class="container py-lg-5 py-md-4 py-3">
         <div class="row">
             <div class="col-lg-6 pe-lg-5">
@@ -11,36 +14,17 @@
                     I Specialize in Branding and Strategy, and am passionate about creating Awesome
                     Portfolio work. And I always ready to impress the audience with my Creativity.
                 </p>
-                <div class="progress-info mt-5">
-                    <h6 class="progress-tittle">UI/UX Design</h6>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+
+                @foreach (var item in Model)
+                {
+                    <div class="progress-info mt-5">
+                        <h6 class="progress-tittle">@item.TechnologyTitle</h6>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: @item.TechnologyValue%" aria-valuenow="@item.TechnologyValue" aria-valuemin="0" aria-valuemax="100">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="progress-info">
-                    <h6 class="progress-tittle">
-                        Ideas &amp; Technology
-                    </h6>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-                        </div>
-                    </div>
-                </div>
-                <div class="progress-info">
-                    <h6 class="progress-tittle">Branding Design</h6>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                        </div>
-                    </div>
-                </div>
-                <div class="progress-info mb-0">
-                    <h6 class="progress-tittle">Responsive Web Design</h6>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                        </div>
-                    </div>
-                </div>
+                }
             </div>
         </div>
     </div>
