--- a/ResumeProject/Views/Default/PartialServices.cshtml
+++ b/ResumeProject/Views/Default/PartialServices.cshtml
@@ -1,51 +1,28 @@
-﻿<section class="about-section py-5">
+﻿@using ResumeProject.Models
+@model List<TblService>
+
+<section class="about-section py-5">
     <div class="container py-lg-5 py-md-4 py-2">
         <div class="title-heading-w3 mx-auto text-center mb-sm-5 mb-4">
             <h3 class="w3l-title-main">What I do for you</h3>
         </div>
         <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6">
-                <div class="about-single">
-                    <div class="about-icon mb-4">
-                        <i class="fas fa-chalkboard"></i>
+            @foreach (var item in Model)
+            {
+                <div class="col-lg-4 col-md-6">
+                    <div class="about-single">
+                        <div class="about-icon mb-4">
+                            <i class="@item.ServiceIcon"></i>
+                        </div>
+                        <div class="about-content">
+                            <h5 class="mb-3"><a href="#url">@item.ServiceTitle</a></h5>
+                            <p>
+                                @item.ServiceDescription
+                            </p>
+                        </div>
                     </div>
-                    <div class="about-content">
-                        <h5 class="mb-3"><a href="#url">Web Development</a></h5>
-                        <p>
-                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                            laudan.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mt-md-0 mt-3">
-                <div class="about-single">
-                    <div class="about-icon mb-4">
-                        <i class="fab fa-app-store"></i>
-                    </div>
-                    <div class="about-content">
-                        <h5 class="mb-3"><a href="#url"> App development</a></h5>
-                        <p>
-                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                            laudan.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mt-lg-0 mt-3">
-                <div class="about-single">
-                    <div class="about-icon mb-4">
-                        <i class="fas fa-camera-retro"></i>
-                    </div>
-                    <div class="about-content">
-                        <h5 class="mb-3"><a href="#url"> Photography</a></h5>
-                        <p>
-                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                            laudan.
-                        </p>
-                    </div>
-                </div>
-            </div>
+                </div>            
+            }
         </div>
 
         <div class="w3l-btn text-center">
