--- a/ResumeProject/Views/Default/PartialStats.cshtml
+++ b/ResumeProject/Views/Default/PartialStats.cshtml
@@ -3,22 +3,21 @@
         <div class="w3l-stats-inner-inf py-lg-4">
             <div class="row stats-con text-center">
                 <div class="col-lg-3 col-6 stats_info counter_grid">
-                    <p class="counter"> 1500 </p>
-                    <h3>Finished Projects</h3>
+                    <p class="counter"> @ViewBag.skillCount </p>
+                    <h3>Skill Count</h3>
                 </div>
                 <div class="col-lg-3 col-6 stats_info counter_grid">
-                    <p class="counter"> 2500 </p>
-                    <h3>Working Hours</h3>
+                    <p class="counter"> @ViewBag.serviceCount </p>
+                    <h3>Service Count</h3>
                 </div>
                 <div class="col-lg-3 col-6 stats_info counter_grid mt-lg-0 mt-sm-5 mt-5">
-                    <p class="counter"> 1280 </p>
-                    <h3>Online Support</h3>
+                    <p class="counter"> @ViewBag.averageTechnologyValue </p>
+                    <h3>Average Technology Value</h3>
                 </div>
                 <div class="col-lg-3 col-6 stats_info counter_grid mt-lg-0 mt-sm-5 mt-5">
-                    <p class="counter"> 3020 </p>
+                    <p class="counter"> @ViewBag.happyCustomer </p>
                     <h3>Happy Customers</h3>
                 </div>
-
             </div>
         </div>
     </div>
