edit project page data

--- a/ResumeProject/Views/Default/PartialScripts.cshtml
+++ b/ResumeProject/Views/Default/PartialScripts.cshtml
@@ -61,9 +61,9 @@ $(document).ready(function() {
 <!-- //brands-->
 <!-- /typig-text-->
 <script>
-const typedTextSpan = document.querySelector(".typed-text");
-        const cursorSpan = document.querySelector(".cursor");
-        const textArray = ["Web Designer", "Web Developer", "Photographer", "Freelancer"];
+    const typedTextSpan = document.querySelector(".typed-text");
+    const cursorSpan = document.querySelector(".cursor");
+    const textArray = ["Web Designer", "Web Developer", "Graphic Designer", "Freelancer"];
         const typingDelay = 200;
         const erasingDelay = 10;
         const newTextDelay = 100; // Delay between current and next text
