edit data of experience

--- a/ResumeProject/Views/Default/Index.cshtml
+++ b/ResumeProject/Views/Default/Index.cshtml
@@ -30,7 +30,7 @@ Author URL: http://w3layouts.com
     @Html.Action("PartialFeaturedSkills")
     <!-- //Skills Section -->
     <!-- Why Choose Us Section-->
-    @Html.Action("PartialChoose")
+    @Html.Action("PartialExperience")
     <!-- //Why Choose Us Section-->
     <!-- Stats Section-->
     @Html.Action("PartialStats")
