--- a/ResumeProject/Views/Default/PartialNavbar.cshtml
+++ b/ResumeProject/Views/Default/PartialNavbar.cshtml
@@ -20,16 +20,16 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ms-lg-auto align-items-center">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/Default/Index/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Projects</a>
+                        <a class="nav-link" href="/Service/Index/">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="/Contact/SendMessage/">Contact</a>
                     </li>
                 </ul>
             </div>
