--- a/ResumeProject/Views/Default/Index.cshtml
+++ b/ResumeProject/Views/Default/Index.cshtml
@@ -1,56 +1,30 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_DefaultLayout.cshtml";
 }
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
-<!doctype html>
-<html lang="en">
 
-@Html.Action("PartialHeader")
-
-<body>
-
-    <!--header-->
-    @Html.Action("PartialNavbar")
-    <!--//header-->
-    <!-- banner section -->
-    @Html.Action("PartialBanner")
-    <!-- //banner section -->
-    <!-- About Section-->
-    @Html.Action("PartialAbout")
-    <!-- //About Section-->
-    <!-- Services Section -->
-    @Html.Action("PartialServices")
-    <!-- //Services Section -->
-    <!-- Skills Section -->
-    @Html.Action("PartialFeaturedSkills")
-    <!-- //Skills Section -->
-    <!-- Why Choose Us Section-->
-    @Html.Action("PartialExperience")
-    <!-- //Why Choose Us Section-->
-    <!-- Stats Section-->
-    @Html.Action("PartialStats")
-    <!-- //Stats Section-->
-    <!-- portfolio -->
-    @Html.Action("PartialPortfolio")
-    <!-- //portfolio -->
-    <!--/brands-->
-    @Html.Action("PartialBrands")
-    <!-- //brands -->
-    <!-- footer -->
-    @Html.Action("PartialFooter")
-    <!-- //footer -->
-    <button onclick="topFunction()" id="movetop" title="Go to top">
-        <span class="fas fa-level-up-alt" aria-hidden="true"></span>
-    </button>
-    <!-- Js scripts -->
-    @Html.Action("PartialScripts")
-    <!-- //Js scripts -->
-
-</body>
-
-</html>
+<!-- banner section -->
+@Html.Action("PartialBanner")
+<!-- //banner section -->
+<!-- About Section-->
+@Html.Action("PartialAbout")
+<!-- //About Section-->
+<!-- Services Section -->
+@Html.Action("PartialServices")
+<!-- //Services Section -->
+<!-- Skills Section -->
+@Html.Action("PartialFeaturedSkills")
+<!-- //Skills Section -->
+<!-- Why Choose Us Section-->
+@Html.Action("PartialExperience")
+<!-- //Why Choose Us Section-->
+<!-- Stats Section-->
+@Html.Action("PartialStats")
+<!-- //Stats Section-->
+<!-- portfolio -->
+@Html.Action("PartialPortfolio")
+<!-- //portfolio -->
+<!--/brands-->
+@Html.Action("PartialBrands")
+<!-- //brands -->
