--- a/ResumeProject/Views/Default/PartialNavbar.cshtml
+++ b/ResumeProject/Views/Default/PartialNavbar.cshtml
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="/Default/Index/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="/About/Index/">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/Service/Index/">Services</a>
